# enterprise-document-intelligence-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
enterprise_document_intelligence_rag/app/: main.py
enterprise_document_intelligence_rag/app/api/: routes.py
enterprise_document_intelligence_rag/app/chunking/: chunker.py
enterprise_document_intelligence_rag/app/core/: exceptions.py  logger.py  session_store.py
enterprise_document_intelligence_rag/app/embeddings/: embedding.py
enterprise_document_intelligence_rag/app/ingestion/: loader.py
enterprise_document_intelligence_rag/app/schemas/: document.py
enterprise_document_intelligence_rag/app/services/: ingestion_service.py  query_service.py
enterprise_document_intelligence_rag/app/vectorstores/: faiss_store.py
vectorstore/: index.pkl
